--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ django-cors-headers==4.7.0
 djangorestframework==3.16.0
 mongoengine==0.27.0
 django-rest-framework-mongoengine==3.4.1
+dnspython==2.7.0
 fake-useragent==2.1.0
 idna==3.10
 importlib-metadata==8.6.1
