Register/Login view with authentication

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-MONGODB_CONNECTION_STRING=mongodb+srv://aalassal:4KqNam1hwujgPIlR@pcsite.i1g3eqi.mongodb.net/PCSite?retryWrites=true&w=majority&appName=PCSite
+MONGODB_CONNECTION_STRING=mongodb+srv://aalassal:iloveeden@pcsite.i1g3eqi.mongodb.net/PCSite?retryWrites=true&w=majority&appName=PCSite
 MONGODB_DB_NAME=PCSite
+SECRET_KEY= 2FnIAnlI-5JmeQg:Um89NpP57_7Nw98cKz
