--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,35 +5,37 @@ bs4==0.0.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
 cssselect==1.3.0
-django>=4.2,<5.0
+django==4.2.20
 django-cors-headers==4.7.0
-djangorestframework==3.16.0
-mongoengine==0.27.0
 django-rest-framework-mongoengine==3.4.1
+djangorestframework==3.16.0
+djangorestframework-simplejwt==5.5.0
 dnspython==2.7.0
 fake-useragent==2.1.0
 idna==3.10
 importlib-metadata==8.6.1
 lxml==5.3.1
 lxml-html-clean==0.4.1
+markupsafe==3.0.2
+mongoengine==0.27.0
 parse==1.20.2
 pyee==11.1.1
+pyjwt==2.9.0
 pymongo==3.11.4
 pypartpicker==2.0.5
 pyppeteer==2.0.0
 pyquery==2.0.1
+python-dotenv==1.0.1
 pytz==2025.2
 requests==2.32.3
 requests-html==0.10.0
 soupsieve==2.6
-sqlparse>=0.3.1
+sqlparse==0.5.3
+stripe==12.0.0
 tqdm==4.67.1
 typing-extensions==4.13.0
 urllib3==1.26.20
 w3lib==2.3.1
 websockets==10.4
-zipp==3.21.0
-python-dotenv==1.0.1
 werkzeug==3.1.3
-PyJWT==2.10.1
-
+zipp==3.21.0
